2010-05-07  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Bump up version number to 1.9.3.
	* configure.ac

2010-05-06  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Return const reference.
	* src/LpdMessageReceiver.h
	* src/LpdReceiveMessageCommand.h

2010-05-06  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Removed useless pathJoin
	* src/MetalinkParserController.cc

2010-05-06  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Fixed the bug that name attribute of file element in Metalink file
	is not properly sanitized.
	* src/Metalink2RequestGroup.cc
	* src/MetalinkParserController.cc
	* test/Makefile.am
	* test/Metalink2RequestGroupTest.cc
	* test/metalink4-dosdirtraversal.xml

2010-05-06  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Fixed the bug that if filename in Content-Disposition header
	includes ';', aria2 cuts filename after ';'.
	* src/util.cc
	* test/UtilTest.cc

2010-04-28  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Release 1.9.2

2010-04-27  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Fixed compiler warning on opensolaris.
	* src/StringFormat.h
	* src/XORCloser.h

2010-04-27  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Updated doc
	* test/array_funTest.cc

2010-04-27  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Fixed segmentation fault when running unit tests on opensolaris.
	* src/SocketCore.cc
	* src/bittorrent_helper.cc

2010-04-26  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Updated Russian translation. Thanks to all translators.
	* po/ru.po

2010-04-26  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Updated po templates.
	* po/aria2.pot

2010-04-25  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Print warning when trying to add file descriptor >= FD_SET or < 0
	to fd_set for other than MinGW32 build. For MinGW32 build, print
	warning when trying to add file descriptor to fd_set when it