@@ -1,3 +1,15 @@
+2010-05-08  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>
+
+	Return const reference.
+	* src/DefaultPieceStorage.h
+	* src/DownloadContext.h
+	* src/FeatureConfig.cc
+	* src/FeatureConfig.h
+	* src/OptionParser.cc
+	* src/OptionParser.h
+	* src/SimpleRandomizer.cc
+	* src/SimpleRandomizer.h
+
 2010-05-07  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>
 
 	Bump up version number to 1.9.3.
